--- a/DetectionPersonForShop.WEB/DetectionPersonForShop.WEB.csproj
+++ b/DetectionPersonForShop.WEB/DetectionPersonForShop.WEB.csproj
@@ -9,7 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DetectionPersonForShop.BLL\DetectionPersonForShop.BLL.csproj" />
+    <ProjectReference Include="..\DetectionPersonForShop.DAL\DetectionPersonForShop.DAL.csproj" />
   </ItemGroup>
 
 </Project>
