--- a/DetectionPersonForShop.BLL/DetectionPersonForShop.BLL.csproj
+++ b/DetectionPersonForShop.BLL/DetectionPersonForShop.BLL.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DetectionPersonForShop.DAL\DetectionPersonForShop.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
